2006-11-15  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-charset.el:
	* mule/mule-charset.el (charsets-in-string):
	Implement it in terms of charsets-in-region.
	* mule/mule-charset.el (charsets-in-region): Removed. It's now in
	C.

2006-11-07  Aidan Kehoe  <kehoea@parhasard.net>

	* unicode.el:
	Re-introduce ccl-encode-to-ucs-2; it's still being used by the
	JIT-UCS charsets, despite what I thought. Thank you Ilya. 

2006-11-05  Aidan Kehoe  <kehoea@parhasard.net>
        
	* mule/arabic.el (arabic-digit):  
	* mule/arabic.el (arabic-1-column):  
	* mule/arabic.el (arabic-2-column):  
	* mule/chinese.el (make-chinese-cns11643-charset):  
	* mule/chinese.el (chinese-sisheng):  
	* mule/english.el (ascii-right-to-left):  
	* mule/ethiopic.el (ethiopic):  
	* mule/european.el (latin-iso8859-14):  
	* mule/european.el (latin-iso8859-16):  
	* mule/indian.el (indian-is13194):  
	* mule/indian.el (indian-1-column):  
	* mule/indian.el (indian-2-column):  
	* mule/japanese.el (japanese-jisx0213-1):  
	* mule/japanese.el (japanese-jisx0213-2):  
	* mule/lao.el (lao):  
	* mule/misc-lang.el (ipa):  
	* mule/mule-charset.el:  
	* mule/thai-xtis.el (thai-xtis):  
	* mule/tibetan.el (tibetan-1-column):  
	* mule/tibetan.el (tibetan):  
	* mule/vietnamese.el (vietnamese-viscii-lower):  
	* mule/vietnamese.el (vietnamese-viscii-upper):  
	Stop using the `registry' charset property; use `registries'  
	instead. The difference is that registries is an ordered vector of  
	X11 registries and encodings rather than a regexp; this means we  
	can leave the matching to the X11 server, avoiding transferring  
	huge amounts of data (perhaps across the network!) in order to do  
	a regexp search on it.  
	* mule/mule-charset.el (charset-registries): New.  
	charset-registries returns the registries of a charset;  
	* mule/mule-charset.el (set-charset-registry): Moved here from C.

2006-11-05  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.el (face-property-matching-instance): 