@@ -717,7 +717,8 @@ node of a file of this name."
 		    ;; Nooooooooooo!  Info-index can extend across more
 		    ;; than one file (e.g. XEmacs, Lispref)
 		    ;; Info-index-alternatives nil
-		    buffer-file-name nil)
+		    buffer-file-name nil
+		    buffer-file-truename nil)
 	      (erase-buffer)
 	      (if (string= "dir" (file-name-nondirectory filename))
 		  (Info-insert-dir)
@@ -1052,7 +1053,8 @@ actually get any text from."
       (message "Composing main Info directory...done"))
     (setq Info-dir-contents (buffer-string)))
   (setq default-directory (file-name-as-directory Info-dir-contents-directory))
-  (setq buffer-file-name (caar Info-dir-file-attributes)))
+  (setq buffer-file-name (caar Info-dir-file-attributes)
+	buffer-file-truename (file-truename buffer-file-name)))
 
 (defmacro Info-directory-files (dir-file &optional all full nosort files-only)
   "Return a list of Info files living in the same directory as DIR-FILE.
@@ -1423,7 +1425,8 @@ invoke \"xemacs -batch -f Info-batch-rebuild-dir /usr/local/info\"."
 	    (throw 'foo t)))))
     (or (equal Info-current-subfile lastfilename)
 	(let ((buffer-read-only nil))
-	  (setq buffer-file-name nil)
+	  (setq buffer-file-name nil
+		buffer-file-truename nil)
 	  (widen)
 	  (erase-buffer)
 	  (Info-insert-file-contents (Info-suffixed-file
@@ -1531,7 +1534,8 @@ versions of NAME. Only the suffixes are tried."
 	  (call-process shell-file-name nil t nil shell-command-switch command)
 	  (message "")
 	  (when visit
-	    (setq buffer-file-name file)
+	    (setq buffer-file-name file
+		  buffer-file-truename (file-truename buffer-file-name))
 	    (set-buffer-modified-p nil)
 	    (clear-visited-file-modtime)))
       (insert-file-contents file visit))))
